# agents_recsys

./: README.md  pdf_to_md.ipynb  pyproject.toml  recsys.ipynb  recsys_flows.ipynb
data/: conversation_01.txt  ge_travel_insurance_2024.txt  income_travel_insurance_2024.txt
data/transcripts/: conversation_01.txt
src/recsys/: crew.py  main.py
src/recsys/config/: agents.yaml  tasks.yaml
