[project]
name = "recsys"
version = "0.1.0"
description = "recsys using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
recsys = "recsys.main:run"
run_crew = "recsys.main:run"
train = "recsys.main:train"
replay = "recsys.main:replay"
test = "recsys.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
